--- a/app/src/main/res/layout/key_list.xml
+++ b/app/src/main/res/layout/key_list.xml
@@ -34,11 +34,30 @@
             android:id="@+id/editText"
             android:layout_width="232dp"
             android:layout_height="52dp"
+            android:layout_marginStart="62dp"
+            android:layout_marginTop="26dp"
+            android:layout_marginBottom="2dp"
             android:ems="10"
             android:inputType="textPersonName"
             android:text="Key..."
-            tools:layout_editor_absoluteX="100dp"
-            tools:layout_editor_absoluteY="30dp" />
+            android:textColor="#FFF"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@Copyright Samuel Ricardo"
+        android:textColor="#fff"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.976"
+        tools:targetApi="o" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
