--- a/app/src/main/res/layout/key_list.xml
+++ b/app/src/main/res/layout/key_list.xml
@@ -32,18 +32,35 @@
 
         <EditText
             android:id="@+id/editText"
-            android:layout_width="232dp"
+            android:layout_width="0dp"
             android:layout_height="52dp"
-            android:layout_marginStart="62dp"
+            android:layout_marginStart="20dp"
             android:layout_marginTop="26dp"
+            android:layout_marginEnd="10dp"
             android:layout_marginBottom="2dp"
             android:ems="10"
             android:inputType="textPersonName"
             android:text="Key..."
             android:textColor="#FFF"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/imageView2"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0" />
+
+        <ImageView
+            android:id="@+id/imageView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="13dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="3dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/editText"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/search_icon_whitte_64px" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <TextView
