Create: Activity - CreateKeyActivity (controller)

--- a/app/src/main/res/layout/key_list.xml
+++ b/app/src/main/res/layout/key_list.xml
@@ -96,6 +96,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="24dp"
         android:clickable="true"
+        android:onClick="goToCreate"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.954"
