--- a/app/src/main/res/layout/create_key.xml
+++ b/app/src/main/res/layout/create_key.xml
@@ -174,7 +174,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         android:background="@drawable/button_background_orange"
-        android:onClick="next_page"
+        android:onClick="nextPage"
         android:text="Salvar"
         android:textColor="#FFF"
         android:textSize="28dp"
