--- a/app/src/main/res/layout/create_key.xml
+++ b/app/src/main/res/layout/create_key.xml
@@ -66,7 +66,7 @@
             android:layout_marginBottom="2dp"
             android:ems="10"
             android:inputType="textPersonName"
-            android:text="Nome da chave..."
+            android:hint="Nome da chave..."
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -114,7 +114,7 @@
             android:layout_marginBottom="2dp"
             android:ems="10"
             android:inputType="textPersonName"
-            android:text="Login para salvar..."
+            android:hint="Login para salvar..."
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -160,7 +160,7 @@
             android:layout_marginBottom="2dp"
             android:ems="10"
             android:inputType="textPersonName"
-            android:text="Senha para salvar..."
+            android:hint="Senha para salvar..."
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
