--- a/app/src/main/res/layout/key_list.xml
+++ b/app/src/main/res/layout/key_list.xml
@@ -35,7 +35,7 @@
         app:layout_constraintTop_toBottomOf="@+id/toolbar">
 
         <EditText
-            android:id="@+id/editText"
+            android:id="@+id/editTextSearch"
             android:layout_width="0dp"
             android:layout_height="52dp"
             android:layout_marginStart="20dp"
@@ -47,22 +47,23 @@
             android:text="Key..."
             android:textColor="#FFF"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/imageView2"
+            app:layout_constraintEnd_toStartOf="@+id/imageViewSearch"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.0" />
 
         <ImageView
-            android:id="@+id/imageView2"
+            android:id="@+id/imageViewSearch"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:layout_marginTop="13dp"
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="3dp"
+            android:onClick=""
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/editText"
+            app:layout_constraintStart_toEndOf="@+id/editTextSearch"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/search_icon_whitte_64px" />
     </androidx.constraintlayout.widget.ConstraintLayout>
