Refactor: View (layout)

--- a/app/src/main/res/layout/create_key.xml
+++ b/app/src/main/res/layout/create_key.xml
@@ -175,7 +175,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         android:background="@drawable/button_background_orange"
-        android:onClick="nextPage"
+        android:onClick="onSavePress"
         android:text="Salvar"
         android:textColor="#FFF"
         android:textSize="28dp"
@@ -193,7 +193,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         android:background="@drawable/button_background_orange"
-        android:onClick="nextPage"
+        android:onClick="onDeletePress"
         android:text="Excluir"
         android:textColor="#FFF"
         android:textSize="28dp"
